gunakan try catch dan login logout menggunakan swagger also
