# app/Http/Controllers/Controller.php
@@ -17,6 +17,14 @@ use Illuminate\Routing\Controller as BaseController;
  *     url="http://127.0.0.1:9090",
  *     description="Localhost API server"
  * )
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     description="Masukkan token hasil login: Bearer {token}"
+ * )
  */
 
 class Controller extends BaseController
